serviceOc.yaml
apiVersion: v1
kind: Service
metadata:
  name: validating-service
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name : mycertificate
spec:
  selector:
    app: validating-service
  clusterIP: 172.30.136.123
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
