webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-webhook
webhooks:
- name: validating-service.test.svc
  rules:
  - apiGroups:
    - ""
    - route.openshift.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - routes
    - pods
    - deployments
  clientConfig:
    service:
      namespace: test
      name: validating-service
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDakNDQWZLZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREEyTVRRd01nWURWUVFEREN0dmNHVnUKYzJocFpuUXRjMlZ5ZG1salpTMXpaWEoyYVc1bkxYTnBaMjVsY2tBeE5UTXpPREEzTmpnNU1CNFhEVEU0TURndwpPVEE1TkRFeU9Gb1hEVEl6TURnd09EQTVOREV5T1Zvd05qRTBNRElHQTFVRUF3d3JiM0JsYm5Ob2FXWjBMWE5sCmNuWnBZMlV0YzJWeWRtbHVaeTF6YVdkdVpYSkFNVFV6TXpnd056WTRPVENDQVNJd0RRWUpLb1pJaHZjTkFRRUIKQlFBRGdnRVBBRENDQVFvQ2dnRUJBS3E0R2pGeDR3aDR3Q29aQUdXNUt3Qyt4WWt6ejc3U1V3NGJOSktMVmlTRwpqdHhOOGhxNlJ2QU [...]
